argo/networkpolicy-argocd-server.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.6
  name: argocd-server
  namespace: argo
  annotations:
    noa.re/deploy-id: ed66ede51db9675c
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
